Bug 90197 - Resource Leaks
Summary: Resource Leaks
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: libfprint (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-27 15:53 UTC by maddin200
Modified: 2018-05-25 11:31 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
img: Fix fd leaks (852 bytes, patch)
2018-05-25 11:31 UTC, Bastien Nocera
Details | Splinter Review

Description maddin200 2015-04-27 15:53:44 UTC
img.c line 153
Missing fclose
	if (r < 0) {
		fp_err("pgm header write failed, error %d", r);
		return r;
	}

as well line 159
	r = fwrite(img->data, 1, write_size, fd);
	if (r < write_size) {
		fp_err("short write (%d)", r);
		return -EIO;
	}
Comment 1 Bastien Nocera 2018-05-25 11:31:07 UTC
Created attachment 139760 [details] [review]
img: Fix fd leaks

Spotted by maddin200@aol.com
Comment 2 Bastien Nocera 2018-05-25 11:31:19 UTC
Attachment 139760 [details] pushed as 55b8306 - img: Fix fd leaks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.