img: Fix fd leaks

Spotted by maddin200@aol.com

https://bugs.freedesktop.org/show_bug.cgi?id=90197